--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,21 @@
             <artifactId>jsf-impl</artifactId>
             <version>${jsf.impl}</version>
         </dependency>
+
+
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>3.2.3.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>3.2.3.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
