--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,8 +18,6 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
 
-    <!--Spring Security filter
-    Registers the springSecurityFilterChain Filter for every URL in your application-->
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -27,15 +25,15 @@
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
 
-    <!--Spring context configuration file location-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/security-config.xml</param-value>
+        <param-value>WEB-INF/spring-security.xml</param-value>
     </context-param>
 
-    <!--Adds a ContextLoaderListener that loads the security-config.xml.-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
