--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,10 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/spring-security.xml</param-value>
+        <param-value>
+            WEB-INF/spring-security.xml
+            WEB-INF/spring-config.xml
+        </param-value>
     </context-param>
 
     <listener>
