--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,13 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+        <!--Logs-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 
     <build>
